crates/parser/tests/cases/snapshots/cases__errors__contract_bad_name.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(contract_bad_name), module::parse_module,\n    \"contract 1X {\\n x: u8 \\n}\")"

---
error: failed to parse contract definition
  ┌─ contract_bad_name:1:10
  │
1 │ contract 1X {
  │          ^ expected a name, found a number
  │
  = Note: `contract` must be followed by a name, which must start with a letter and contain only letters, numbers, or underscores


